# UBot.Common.Native

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  UBot.Common.Native.sln
UBot.Common.Native/: AppHost.h  AppHostTpl.hpp  Export.def  ResultBox.h  UBot.Common.Native.vcxproj  UBot.Common.Native.vcxproj.filters  UBotClientHost.cpp  UBotClientHost.h  UNativeStrHelper.cpp  UNativeStrHelper.h
include/: AppApiDefiner.hpp  AppHost.h  AsyncResponsor.h  ChatMessageType.h  EventResultType.h  StringBox.h  UNativeStr.h
include/RpcTemplate/: ApiDefiner.hpp  RpcHelperMacro.hpp  RpcTemplate.hpp
include/RpcTemplate/Arg/: BoolArg.hpp  EnumArg.hpp  FlattedStringArrayArg.hpp  IntArg.hpp  JsonRawArg.hpp  NormalEventResultArg.hpp  StringArg.hpp  VoidArg.hpp
include/RpcTemplate/Responder/: EventResponder.hpp  NormalResultResponder.hpp  ReasonableEventResponder.hpp
src/: AppHostA.cpp  AppHostCommon.cpp  AppHostTpl.hpp  AppHostU8.cpp  AppHostW.cpp  AsyncResponsorA.cpp  AsyncResponsorCommon.cpp  AsyncResponsorTpl.hpp  AsyncResponsorU8.cpp  AsyncResponsorW.cpp  DllMain.cpp  Export.def  JsonRpc.cpp  JsonRpc.h  RpcTemplate.hpp  StringBoxA.cpp  StringBoxCommon.cpp  StringBoxTpl.hpp  StringBoxU8.cpp  StringBoxW.cpp  UBotAppContext.h  UBotClientHost.cpp  UBotClientHost.h  UNativeStrHelper.cpp  UNativeStrHelper.h  spawn.hpp  unordered_string_map.hpp
src/RpcTemplate/: BoolArg.hpp  EnumArg.hpp  EventRespond.hpp  FlattedStringArrayArg.hpp  IntArg.hpp  JsonRawArg.hpp  NormalResultResponder.hpp  RpcHelperMacroImpl.hpp  RpcTemplateImpl.hpp  StringArg.hpp  TrivialValue.hpp
src/RpcTemplate/Arg/: ArgImpl.hpp  BoolArgImpl.hpp  EnumArgImpl.hpp  FlattedStringArrayArgImpl.hpp  IntArgImpl.hpp  JsonRawArgImpl.hpp  NormalEventResultArgImpl.hpp  StringArgImpl.hpp  VoidArgImpl.hpp
src/RpcTemplate/Responder/: EventResponderImpl.hpp  NormalResultResponderImpl.hpp  ReasonableEventResponderImpl.hpp  ResponderImpl.hpp
